# cppmagic

./: .clang-format  CMakeLists.txt  README.rst
.github/workflows/: cmake-single-platform.yml
include/cppmagic/: Backward.h  BoomMode.h  Core.h  CppMagic.h  CppMagic.h.back  FilePath.h  FileSelector.h  GenerateMode.h  Logger.h  MagicModeBase.h  MemoryAlias.h  Settings.h  SortMode.h  SortingMethod.h  TagInfo.h  TagKinds.h  TagManager.h  TagUtility.h  Utils.h
src/: BoomMode.cpp  CppMagic.cpp  CppMagic.cpp.back  FilePath.cpp  FileSelector.cpp  GenerateMode.cpp  MagicModeBase.cpp  Settings.cpp  SortMode.cpp  SortingMethod.cpp  TagInfo.cpp  TagManager.cpp  TagUtility.cpp  Utils.cpp  main.cpp
tests/: test_FilePath.cpp  test_FileSelector.cpp
